tests/baselines/reference/localAliasExportAssignment.errors.txt
localAliasExportAssignment_0.ts(5,10): error TS2454: Variable 'server' is used before being assigned.


==== localAliasExportAssignment_1.ts (0 errors) ====
    ///<reference path='localAliasExportAssignment_0.ts'/>
    import connect = require('./localAliasExportAssignment_0');
    
    connect();
    
    
    
==== localAliasExportAssignment_0.ts (1 errors) ====
    var server: {
        (): any;
    };
    
    export = server;
             ~~~~~~
!!! error TS2454: Variable 'server' is used before being assigned.
    